# byre

./: CHANGELOG.md  Cargo.toml  README.md
examples/: config.toml  full.rs
src/: cli.rs  config.rs  lib.rs  telemetry.rs
tests/: integration.rs
