[package]
name = "byre"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin Halsted <bhalsted@gmail.com>"]
description = "A set of libs for quickly bootstrapping a project"
license = "MIT"
readme = "README.md"
repository = "https://github.com/halzy/byre"
categories = ["config", "development-tools"]
keywords = ["service", "telemetry", "settings", "seccomp", "metrics"]

[[example]]
name = "full"

[features]
# Enables jemalloc as a memory allocator
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
doku = "0.21.1"
figment = { version = "0.10.19", features = ["toml", "env", "test"] }
opentelemetry = { version = "0.27.1", default-features = true }
opentelemetry-appender-tracing = { version = "0.27.0", default-features = true }
opentelemetry-otlp = { version = "0.27.0", default-features = true , features = ["logs", "metrics", "trace", "grpc-tonic", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", default-features = true , features = ["logs", "metrics", "rt-tokio", "rt-tokio-current-thread"] }
serde = { version = "1.0.217", features = ["derive"] }
snafu = { version = "0.8.5", default-features = false, features = ["std", "rust_1_81"] }
tikv-jemallocator = { version = "0.6.0", optional = true, features = [ "profiling", "stats", "background_threads" ] }
tokio = { version = "1", features=["macros", "rt-multi-thread"] }
tonic = { version = "0.12.3", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt", "env-filter", "std"] }

[dev-dependencies]
tokio = { version = "1", features=["macros"] }

